Adding some logging to indexer